# openlmi-poc

./: .gitignore  README  groups  project.config
cli-tools-java/: .classpath  .project  CMakeLists.txt  README
cli-tools-java/cmake/modules/: override.cmake
cli-tools-java/src/: CMakeLists.txt  run.sh
cli-tools-java/src/org/cura/curaoptions/: CuraBasicOptions.java
cli-tools-java/src/org/cura/curapower/: CuraPower.java  CuraPowerClient.java
cli-tools-java/src/org/cura/curaservice/: CuraService.java  CuraServiceClient.java
cli-tools-java/src/org/cura/curauser/: CuraUser.java  CuraUserClient.java
cli-tools-java/src/org/curacli/: CuraPower.java  CuraService.java  CuraUser.java
cli-tools-java/src/org/openlmi/openlmioptions/: OpenLMIBasicOptions.java
cli-tools-java/src/org/openlmi/openlmipower/: OpenLMIPower.java  OpenLMIPowerClient.java
cli-tools-java/src/org/openlmi/openlmiservice/: OpenLMIService.java  OpenLMIServiceClient.java
cli-tools-java/src/org/openlmi/openlmistorage/: LogicalVolume.java  OpenLMIStorage.java  OpenLMIStorageClient.java
cli-tools-java/src/org/openlmi/openlmiuser/: OpenLMIUser.java
cmpi-providers-libs/: README  README.txt
cmpi-providers-libs/konkretcmpi/: README  Widget.h  Widget.mof  WidgetProvider.c
cmpi-providers-libs/konkretcmpi/helloworld-konkret/: CMakeLists.txt  README
cmpi-providers-libs/konkretcmpi/helloworld-konkret/src/: CMakeLists.txt  WidgetProvider.c
cmpi-providers-libs/konkretcmpi/helloworld-konkret/src/test/: test_widget.py
cmpi-providers-libs/pywbem/: README.txt
cmpi-providers-libs/pywbem/provider-tut/: PyTut_FooProvider.py  PyTut_FooProvider.reg  PyTutorial.mof  README  get-code-skeleton.py
cmpi-providers-libs/pywbem/quick-example/: README.txt
cmpi-providers-libs/sblim-cim-client/: JavaClient.java  README  claseslist.txt  compile-run.sh
cmpi-providers-libs/sblim-cim-client-java/: CMakeLists.txt  README  claseslist.txt
cmpi-providers-libs/sblim-cim-client-java/src/: JavaClient.java
cura-condor/: README
cura-condor/cmake/modules/: CuraMacros.cmake
cura-condor/src/: CMakeLists.txt
cura-openstack/: README
openlmi-condor/: CHANGES  MANIFEST  MANIFEST.in  README  setup.py
openlmi-condor/doc/: README
openlmi-condor/mof/: CIM_BasicExecutionService.mof  LMI_BasicExecutionServiceCondor.mof  LMI_BasicExecutionServiceCondorFactory.reg  LMI_BasicExecutionServiceCondorManagement.reg  README
openlmi-condor/providers/: LMI_BasicExecutionServiceCondorFactory.py  LMI_BasicExecutionServiceCondorFactory.reg  LMI_BasicExecutionServiceCondorManagement.py  LMI_BasicExecutionServiceCondorManagement.reg
openlmi-condor/spec-aviary/: README  condor-abacus.spec  condor_config.generic.patch  condor_config.local.generic.patch
openlmi-condor/test/: condorSchedd_methods.txt  jobad_utils.py  test_condor_2soap.py  test_condor_aviray_loop.py  test_condor_provider.py  test_condor_soap.py  test_condor_soap_loop.py
openlmi-condor/test/test-aviary/: aviary.env  submit.py
openlmi-condor/tests/: test-condor-soap.py
openlmi-condor/tools/: get-code-skeleton.py  register.sh
openlmi-openstack/: README
wake-on-lan/: WakeOnLan.java  wakeonlan-magic.py  wsman.txt
